# nexor

./: README.rst  noxfile.py  pyproject.toml  requirements-docs.txt  requirements-lint.txt  requirements-mypy.txt  requirements-tests.txt  requirements.txt
.github/workflows/: pr-main.yml
doc/: api-reference.rst  conf.py  index.rst  quick-start.rst
src/nexor/: __init__.py  __main__.py  cli.py  depend.py  env.py  init_py.py  lock.py
src/nexor/tests/: test_cli.py  test_init.py
