[build-system]
requires = [
    "setuptools", "autocalver"
]
build-backend = "setuptools.build_meta"

[project]
name = "nexor"
dynamic = ["version"]
description = "A Python tooling nexus"
readme = "README.rst"
authors = [{name = "Moshe Zadka", email = "moshez@zadka.club"}]
dependencies = ["gather>=2024.1.5.1", "copier", "tomlkit", "hyperlink"]

[project.optional-dependencies]
tests = ["virtue", "pyhamcrest", "coverage"]
mypy = ["mypy"]
lint = ["flake8", "black"]
docs = ["sphinx"]

[project.entry-points.gather]
placeholder = "nexor"

[project.license]
text = """
Permission is hereby granted, free of charge, to any person obtaining a
copy of this software and associated documentation files (the "Software"),
to deal in the Software without restriction, including without limitation the
rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is furnished
to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"""

[project.urls]
Homepage = "https://github.com/moshez/nexor"

[tool.autocalver]
use = true
log = "git-log-head"
log_command = "git log -n 1 --date=iso"
is_main_var = "GITHUB_REF"
is_main_match = ".*/trunk$"

[project.scripts]
nexor = "nexor.cli:main_command"
nexor-version = "nexor.cli:sub_command"
